--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Text Editor</title>
+    <title>Custom Elements Generators</title>
 </head>
 <body>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
