--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Custom Elements Generators</title>
+    <title></title>
 </head>
 <body>
   <script src="js/main.js"></script>
